Change file name

--- a/assets/sass/theme.sass
+++ b/assets/sass/theme.sass
@@ -13,6 +13,6 @@
 // Bootstrap is imported once all variables have been set
 @import bootstrap/bootstrap
 
-// Add custom styles here:
+// Add custom styles below
 // .my-custom-class
 //   border: 1px solid $primary
